--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
   <!-- Audio stream -->
   <audio id="radio" autoplay muted playsinline>
-    <source id="radio-src" src="http://44.201.116.129:8000/stream" type="audio/mpeg" />
+    <source id="radio-src" src="https://vivalofi.kriblink.com/stream" type="audio/mpeg" />
   </audio>
 
   <!-- Switch sound effect -->
