--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   </div>
 
   <!-- Moved-up message -->
-  <div id="message">Tap anywhere on screen to start radio</div>
+  <div id="message">Tap anywhere on screen to start radios</div>
 
   <!-- Audio stream -->
   <audio id="radio" autoplay muted playsinline>
