--- a/index.html
+++ b/index.html
@@ -75,6 +75,26 @@
       user-select: none;
     }
 
+    #unavailable-message {
+      position: fixed;
+      bottom: 50%;
+      left: 50%;
+      transform: translate(-50%, 50%);
+      background: rgba(0,0,0,0.8);
+      color: #ff3860;
+      font-family: 'Share Tech Mono', monospace;
+      font-weight: bold;
+      font-size: 1.3em;
+      padding: 18px 32px;
+      border-radius: 12px;
+      text-align: center;
+      z-index: 10;
+      box-shadow: 0 0 12px #000;
+      display: none;
+      user-select: none;
+      text-shadow: 0 0 8px #ff3860, 0 0 2px #000;
+    }
+
     audio {
       display: none;
     }
@@ -135,6 +155,9 @@
   <!-- Moved-up message -->
   <div id="message">Tap anywhere on screen to start radios</div>
 
+  <!-- Unavailable station message -->
+  <div id="unavailable-message">🚫 Sorry, this station is not available at the moment. 🙏</div>
+
   <!-- Audio stream -->
   <audio id="radio" autoplay muted playsinline>
     <source id="radio-src" src="https://vivalofi.kriblink.com/stream" type="audio/mpeg" />
@@ -184,6 +207,17 @@
       const bgVideo = document.getElementById('bg-video');
       const bgVideoSrc = document.getElementById('bg-video-src');
       const stationName = document.getElementById('station-name');
+      const unavailableMsg = document.getElementById('unavailable-message');
+
+      // Hide unavailable message by default
+      unavailableMsg.style.display = 'none';
+
+      // If station 3 or 4 (index 2 or 3), show unavailable message and do not switch
+      if (index === 2 || index === 3) {
+        unavailableMsg.style.display = 'block';
+        stationName.textContent = stations[index].name;
+        return;
+      }
 
       // Pause audio and video before switching
       radio.pause();
